--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project(MasterSlaveTimesync)
 
 set(CMAKE_C_STANDARD 99)
 find_package (Threads)
-set(SOURCE_FILES main.c sock.c sock.h error.c error.h str.c str.h master/master.c master/master.h)
+set(SOURCE_FILES main.c sock.c sock.h error.c error.h str.c str.h master/master.c master/master.h slave/slave.c slave/slave.h)
 add_executable(MasterSlaveTimesync ${SOURCE_FILES})
 target_link_libraries (MasterSlaveTimesync ${CMAKE_THREAD_LIBS_INIT})
